fix up header spacing

--- a/site/css/partials/_nav.scss
+++ b/site/css/partials/_nav.scss
@@ -9,9 +9,11 @@
 }
 
 /*----- Menu -----*/
-@media screen and (min-width: 860px) { /* 860px same as max-width?? */
+@media screen and (min-width: 861px) {
     .menu {
-        padding: 10px 18px;
+        padding-left: 1em;
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
     }
 }
 
@@ -60,7 +62,6 @@
         position: absolute;
         top: 120%;
         left: 0px;
-        padding: 10px 18px;
         box-shadow: 0px 1px 1px rgba(0,0,0,0.15);
         border-radius: 3px;
         background: #303030;
@@ -90,10 +91,10 @@
     }
 
     .toggle-nav {
-        padding: 20px;
+        padding-top: 0.5em;
+        padding-bottom: 0.5em;
         float: left;
         display: inline-block;
-        font-size: 20px;
         transition: color linear 0.15s;
     }
 
