--- a/site/css/partials/_scale.scss
+++ b/site/css/partials/_scale.scss
@@ -48,6 +48,9 @@ p {
 
 p.site-wordmark {
     @include font-size('h3');
+    margin-bottom: 0;
+    padding-top: 0.5em;
+    padding-top: 0.5em;
 }
 
 p.technologies, p.services, p.social {
