--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -27,8 +27,10 @@ $susy: (
 header {
     @include container;
 
+    height: 2.916em;
+
     padding-left: 1em;
-    padding-right: 1em;  // TODO: nav currently has + 18px
+    padding-right: 1em;
 
     @media (min-width: 27.25em) {
         padding-left: 1.5em;
